wk_taa_taaqa/src/objects/ATA_Geographic_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTN__c</fullName>
        <label>DTN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Geographic_Assignment_Type__c</fullName>
        <formula>if (AND (Latitude__c != Null, Longitude__c != Null), &apos;GEOCODE&apos;,
If (!isblank(PostalCode__c), &apos;POSTALCODE&apos;,
if (!isblank(County__c), &apos;COUNTY&apos;,
if (!isblank(Region__c), &apos;REGION&apos;,
if (!isblank(State__c), &apos;STATE&apos;,
if (!isblank(Country__c), &apos;COUNTRY&apos;, NULL
))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geographic Assignment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark TRUE when there is a change in DTN
Batch program will pick all DTNs that are marked as updated and recompute account team, unmark this flag.</description>
        <label>Is Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <label>Role Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ATA Geographic Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Role_Name__c</columns>
        <columns>DTN__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <columns>PostalCode__c</columns>
        <columns>County__c</columns>
        <columns>Region__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Geographic_Assignment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ATAGA-{00000}</displayFormat>
        <label>ATA Geographic Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATA Geographic Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>